# Crytalline-Protocol

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  main.rs
.github/workflows/: android_build.yml  multiplatform_build.yml  rust.yml
docs/: Architecture.md  Mathematics.md
examples/: axiomatic_mixer_guard.rs  end_to_end_privacy.rs  in_situ_sovereignty.rs  sovereign_communication.rs  whatsapp_sovereignty.rs
include/: crystalline.h
scripts/: build_all.sh  build_android.sh  compile_core.sh  run_all.sh
src/: axiomatics.rs  crypto.rs  deontic_engine.rs  errors.rs  ethical_rules.rs  ffi.rs  identity.rs  lib.rs  main.rs  market_data.rs  proof.rs  protocol.rs  resolver.rs
